# Chronos

Hardware/Chronos_rev_x301/: Chronos.kicad_pcb  Chronos.pro  Chronos.sch
Hardware/Chronos_rev_x301/Assembly/: BOM.xlsx  CPL.xlsx
Hardware/Chronos_rev_x301/Gerbers/: Chronos-3V3.gbr  Chronos-B_Cu.gbr  Chronos-B_Mask.gbr  Chronos-B_Paste.gbr  Chronos-B_SilkS.gbr  Chronos-Edge_Cuts.gbr  Chronos-F_Cu.gbr  Chronos-F_Mask.gbr  Chronos-F_Paste.gbr  Chronos-F_SilkS.gbr  Chronos-GND.gbr  Chronos.drl
Hardware/Chronos_rev_x302/: Chronos.kicad_pcb  Chronos.sch  sym-lib-table
Hardware/Chronos_rev_x302/Gerbers/: Chronos-3V3.gbr  Chronos-B_Cu.gbr  Chronos-B_Mask.gbr  Chronos-B_Paste.gbr  Chronos-B_SilkS.gbr  Chronos-Edge_Cuts.gbr  Chronos-F_Cu.gbr  Chronos-F_Mask.gbr  Chronos-F_Paste.gbr  Chronos-F_SilkS.gbr  Chronos-GND.gbr  Chronos.drl
Hardware/Libraries/ul_STM8L151K6T6/KiCAD/2020-06-01_15-47-23/: 2020-06-01_15-47-23.lib
Hardware/Libraries/ul_STM8L151K6T6/KiCAD/2020-06-01_15-47-23/footprints.pretty/: STM8L151K6T6.kicad_mod
Hardware/Spice/: Draft1.asc  Draft1.op.raw  Draft1.raw  Schematic.asc  Schematic.op.raw  Schematic.raw  ada4891.cir  schematic_lite.asc  schematic_lite.op.raw  schematic_lite.raw
Reference_Model/: TestVectorGenerator.py  model.py  test.py
Test_SW/: CMakeLists.txt
Test_SW/inc/: adc.h  clock.h  dac.h  gpio.h  hw_base.h  interrupts.h  iwdg.h  mcp41010.h  nop.h  ri.h  spi.h  syscfg.h  timers.h  usart.h  vref.h
Test_SW/src/: adc.c  clock.c  dac.c  gpio.c  interrupts.c  iwdg.c  main.c  mcp41010.c  nop.c  spi.c  timers.c  usart.c
